--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.36.0",
 		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@types/node": "^22",
@@ -25,6 +26,10 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"svelte": "^5.39.5",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"wrangler": "^4.44.0"
+	},
+	"dependencies": {
+		"create-cloudflare": "^2.53.0"
 	}
 }
