--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"wrangler": "^4.44.0"
 	},
 	"dependencies": {
-		"create-cloudflare": "^2.53.0"
+		"create-cloudflare": "^2.53.0",
+		"mixpanel-browser": "^2.72.0"
 	}
 }
